# rotdis

./: .gitignore  README.md  pyproject.toml
_setup/: README.md  setup.py
myscreen/: __main__.py
project_name/: __main__.py
pyscreen/: __main__.py  display.py
rotdis/: __main__.py  display.py
