[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "rotdis"
version = "0.0.0"
description = "App for rotating the display in Windows 10."
authors = ["Martin Neufeld <m.neufeld946@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pywin32 = "^306"

[tool.poetry.scripts]
rotdis = "rotdis.main:main"

[tool.poetry-dynamic-versioning]
enable = true
